# segmentation-radiomics

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  lidc.yaml
notebooks/: colab_segmentation_radiomics.ipynb
scripts/: cohort_sweep.py  download_data.md  make_figures.py  smoke_test.py
src/seg_radiomics/: __init__.py  cli.py  correlation.py  features.py  harmonization.py  morphology.py  pipeline.py  qc.py  reproducibility.py  seg_metrics.py  stats.py
src/seg_radiomics/data/: __init__.py  lidc.py  synthetic.py
src/seg_radiomics/segmentation/: __init__.py  baseline.py  model.py
tests/: test_core.py
