[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seg-radiomics"
version = "0.1.0"
description = "Cancer-imaging segmentation -> radiomic features -> outcome correlation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
seg = ["torch>=2.0", "monai>=1.3", "nibabel>=5.0", "SimpleITK>=2.3"]
radiomics = ["pyradiomics>=3.1", "scikit-learn>=1.2", "pandas>=2.0"]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=7.0"]

[project.scripts]
seg-radiomics = "seg_radiomics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
